ts파일 js파일 병행 시 js파일도 ts가 보호해주도록 하는 방법(JSDoc_코멘트)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "outDir": "build",
       "target": "ES6",
       "lib": ["ES6", "DOM"],
-      "strict": true
+      "strict": true,
+      "allowJs": true   //typescript 안에 javascript를 허용한다는 것
     }
 }
