--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
-    "include": ["src"],
+    "include": ["src"],         //typescript 소스가 작성되는 경로
     "compilerOptions": {
-      "outDir": "build",
-      "target": "ES6",
-      "lib": ["ES6", "DOM"],
-      "strict": true,
-      "allowJs": true   //typescript 안에 javascript를 허용한다는 것
+      "outDir": "build",        //빌드되는 결과물이 담길 폴더명
+      "target": "ES6",          //빌드되는 javascript의 버전
+      "lib": ["ES6", "DOM"],    //javascript 코드가 어떤 환경에서 동작될지 정의 (ex."DOM"⇒ 브라우저에서 동작될 거라는 것)
+      "strict": true,           //typescript가 보호해줄 수 있도록 설정하는 것
+      "allowJs": true           //typescript 안에 javascript를 허용한다는 것
     }
 }
